--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: black
+  background-color:#000000
   color: white;
   padding: 10px;
   text-align: center;
