--- a/style.css
+++ b/style.css
@@ -1,10 +1,2 @@
-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color:#000000
-  color: white;
-  padding: 10px;
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
