--- a/style.css
+++ b/style.css
@@ -3,5 +3,8 @@
  font-size: 26px;
 }
 .footer-name{
-    background: linear-gradient(243deg, #FFD0EC 50%, #c89feb);
-   
+    background: black;
+    Colour: white;
+    Text: Bold;
+    font-size: 20px;
+}
