--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
   padding: 10px;
   display: inline-block;
 }
-/* Footer Container */
 footer {
   background-color: #333;
   color: #fff;
@@ -31,7 +30,25 @@ footer a {
   margin: 0 10px;
 }
 
+footer a:hover {
+  color: #00bcd4;
+  text-decoration: underline;
+}
 
+/* Social Media Icons */
+footer .social-icons {
+  margin: 20px 0;
+}
+
+footer .social-icons a {
+  display: inline-block;
+  margin: 0 5px;
+}
+
+footer .social-icons img {
+  width: 48px;
+  height: 48px;
+}
 
 /* Footer Bottom Text */
 footer .footer-bottom {
@@ -39,3 +56,14 @@ footer .footer-bottom {
   margin-top: 20px;
   opacity: 0.8;
 }
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  footer {
+    padding: 15px 0;
+  }
+
+  footer .social-icons img {
+    width: 36px;
+    height: 36px;
+  }
