--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
   display: inline-block;
 }
 footer {
-  background-color: #333;
-  color: #fff;
+  background-color: Black;
+  color: White;
   padding: 20px 0;
   text-align: center;
   font-family: Arial, sans-serif;
@@ -25,7 +25,7 @@ footer {
 
 /* Footer Links */
 footer a {
-  color: #fff;
+  color: White;
   text-decoration: none;
   margin: 0 10px;
 }
