--- a/style.css
+++ b/style.css
@@ -88,3 +88,17 @@ body {
         margin-left: 0px;
         margin-bottom: 0px;
     }
+ /* Navigation Bar */
+    header{
+        width: 100%;
+        /* width: 76vw; */
+        height: 7vh;
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-bottom: 0px;
+        padding-top: 0px;
+        margin-left: 0px;
+        margin-bottom: 0px;
+        background-color: white;
+            colour: Blue;
+    }
