--- a/style.css
+++ b/style.css
@@ -92,13 +92,13 @@ body {
     header{
         width: 100%;
         /* width: 76vw; */
-        height: 7vh;
+        height: 40;
         padding-left: 0px;
         padding-right: 0px;
         padding-bottom: 0px;
         padding-top: 0px;
         margin-left: 0px;
         margin-bottom: 0px;
-        background-color: white;
+        background-color: White;
             colour: Blue;
     }
