--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
         margin-left: 0px;
         margin-bottom: 0px;
     }
- /* Navigation Bar */
+ Navigation Bar
     header{
         width: 100%;
         /* width: 76vw; */
