--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body {
 
 .social-icons a:hover {
     color: #00aced;
+        Size: 35px
 }
 @media (max-width: 768px) {
     .social-icons a {
@@ -88,17 +89,16 @@ body {
         margin-left: 0px;
         margin-bottom: 0px;
     }
- Navigation Bar
+ .Navigation Bar
     header{
         width: 100%;
-        /* width: 76vw; */
-        height: 40;
+        height: 10%;
         padding-left: 0px;
         padding-right: 0px;
         padding-bottom: 0px;
         padding-top: 0px;
         margin-left: 0px;
         margin-bottom: 0px;
-        background-color: White;
+        background-color: Transparent;
             colour: Blue;
     }
