--- a/style.css
+++ b/style.css
@@ -104,8 +104,8 @@ body {
     }
 .toTheTopButton
 header{
-  width: 100%;
-        height:100%;
+  width: 50;
+        height:50;
         background-colour: White;
 colour: black;
 }
