--- a/style.css
+++ b/style.css
@@ -115,4 +115,14 @@ display: none;
 .toTheTopButton:hover {
     transform: translate(0, -10px);
     background-color: white;
+        logo {
+    font-size: 2em;
+    cursor: default;
+    background: linear-gradient(243deg,#5d69be 15%, #c89feb);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    line-height: 1.6em;
+    letter-spacing: 0px;
 }
