--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 .tittle{
-        width:100%
-                Height:100%
-        position: fixed
-        Font-weight: bold
+        width:100%;
+                Height:100%;
+        position: fixed;
+        Font-weight: bold;
 }
 .h1{
   color: Red;
-        Align: Center
+        Align: Center;
 }
 .h2{
         colour: Blue;
