--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
                 Height:100%;
         position: fixed;
         Font-weight: bold;
+        . social-icon {
+                width: 40%;
+                height: 40%;
+                align: center;
 }
 .main-heading {
   color: red;
