--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@
         width:100%;
                 Height:100%;
         position: fixed;
-        Font-weight: bold;
+        Font-weight: bold 
         . social-icon {
                 width: 40%;
                 height: 40%;
                 align: center;
+        }
 }
 .main-heading {
   color: red;
