--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
         position: fixed;
         Font-weight: bold 
         . social-icon {
-                width: 40%;
-                height: 40%;
+                width: 16;
+                height: 16;
                 align: center;
         }
 }
